client/main.css
/* CSS declarations go here */
/* Custom Stylesheet */
.icon-block {
  padding: 0 15px;
}
.icon-block .material-icons {
	font-size: inherit;
}


.showSideNav {
  padding-left: 300px;
}

@media only screen and (max-width : 992px) {
  .showSideNav {
    padding-left: 0;
  }
}

/** HEADER **/
nav {
  background-color: black;
  opacity: 0.9;
}
.nav-wrapper {
  padding-left: 20px;
}
template {
  height: 100%;
}

/** FOOTER **/
html {
  height: 100%;
}
body {
  height: 100%;
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}
main {
  flex: 1 0 auto;
}
footer.page-footer {
  margin-top: 0;
  /*opacity: 0.8;*/
  background-color: black;
}
.footer-copyright {
  margin-top: -15px;
  box-shadow: 0 1px 0 0 #FFFFFF;
}
.footer-nav {
  padding-left: 20px;
}

.nav-item {
  opacity: 0.8;
}
.nav-item:hover {
  opacity: 1;
}

.side-nav .userView {
    position: relative;
    padding: 32px 32px 0;
    margin-bottom: 8px;
}
.side-nav .userView .background {
    overflow: hidden;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: -1;
}
.side-nav .userView > a {
    height: auto;
    padding: 0;
}
.side-nav a {
    color: rgba(0,0,0,0.87);
    display: block;
    font-size: 14px;
    font-weight: 500;
    height: 48px;
    line-height: 48px;
    padding: 0 32px;
}

.side-nav .userView .circle {
    height: 64px;
    width: 64px;
}

/**** SEARCH BAR CSS */

#searchRow {
  padding-top: 175px;
}

#search_location {
  color: white;
  padding-left: 20px;
  box-shadow: 0 1px 0 0 #000;
}

#search_location:focus {
  background-color: rgba(0, 0, 0, 0.3);
}

/* label color */
.input-field label {
 color: #FFFFFF;
 opacity: 0.7;
}
/* label focus color */
.input-field input[type=text]:focus + label {
 color: #FFFFFF;
}
/* label underline focus color */
.input-field input[type=text]:focus {
 border-bottom: 1px solid #FFFFFF;
 box-shadow: 0 1px 0 0 #000;
}

#search {
  color: white;
}

#searchBtn {
  height: 45px;
  width: 45px;
  margin-top: 15px;
  margin-left: 10px;
}

#searchIcon {
  margin-top: -5px;
}

/* SEARCH BAR CSS END ****/

#myTripsNew {
  margin-left: 10px;
}

.error {
  color: red;
}

#content {
  height: 100%;
}

#mainTitle {
  color: white;
  font-weight: 400;
}

